# tinyexpr

./: CMakeLists.txt  example_logic.c  example_logic.cpp  tinyexpr.c  tinyexpr.h
